--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
       <!-- <a href="index.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
       <nav id="navbar" class="navbar">
-        <div class="logo2"><img src="/pargalogo.png" height=""></img></div>
+        <div class="logo2"><img src="/pargalogo.png" height="" alt="apartman yönetim şirketi"></img></div>
         <ul>
           <li><a class="nav-link scrollto active" href="#home">Anasayfa</a></li>
           <li><a class="nav-link scrollto" href="#about">Biz kimiz?</a></li>
@@ -185,8 +185,8 @@
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
             <div class="icon-box">
               <div class="icon"><i class="bx bxs-school"></i></div>
-              <h4 class="title"><a href="#">Profesyonel Apartman Yönetimi</a></h4>
-              <h2 class="description">Yaşam alanınızdaki her şeyden bizler sorumluyuz ve bunun için minnettarız.</h2>
+              <h4 class="title"><a href="#">Profesyonel Apartman Yönetimi</a></h2>
+                <p class="description">Yaşam alanınızdaki her şeyden bizler sorumluyuz ve bunun için minnettarız.</p>
             </div>
           </div>
 
@@ -973,10 +973,10 @@
               <div class="member-img">
                 <img src="assets/img/team/profile-pic.png" class="img-fluid" alt="Mert Denizman" loading="lazy">
                 <div class="social">
-                  <a><i class="bi bi-twitter"></i></a>
-                  <a><i class="bi bi-facebook"></i></a>
-                  <a><i class="bi bi-instagram"></i></a>
-                  <a><i class="bi bi-linkedin"></i></a>
+                  <a href=""><i class="bi bi-twitter"></i></a>
+                  <a href=""><i class="bi bi-facebook"></i></a>
+                  <a href=""><i class="bi bi-instagram"></i></a>
+                  <a href=""><i class="bi bi-linkedin"></i></a>
                 </div>
               </div>
               <div class="member-info">
@@ -991,10 +991,10 @@
               <div class="member-img">
                 <img src="assets/img/team/team-3.jpg" class="img-fluid" alt="Furkan Denizman" loading="lazy">
                 <div class="social">
-                  <a><i class="bi bi-twitter"></i></a>
-                  <a><i class="bi bi-facebook"></i></a>
-                  <a><i class="bi bi-instagram"></i></a>
-                  <a><i class="bi bi-linkedin"></i></a>
+                  <a href=""><i class="bi bi-twitter"></i></a>
+                  <a href=""><i class="bi bi-facebook"></i></a>
+                  <a href=""><i class="bi bi-instagram"></i></a>
+                  <a href=""><i class="bi bi-linkedin"></i></a>
                 </div>
               </div>
               <div class="member-info">
@@ -1009,10 +1009,10 @@
               <div class="member-img">
                 <img src="assets/img/team/team-1.jpg" class="img-fluid" alt="İrfan Denizman" loading="lazy">
                 <div class="social">
-                  <a><i class="bi bi-twitter"></i></a>
-                  <a><i class="bi bi-facebook"></i></a>
-                  <a><i class="bi bi-instagram"></i></a>
-                  <a><i class="bi bi-linkedin"></i></a>
+                  <a href=""><i class="bi bi-twitter"></i></a>
+                  <a href=""><i class="bi bi-facebook"></i></a>
+                  <a href=""><i class="bi bi-instagram"></i></a>
+                  <a href=""><i class="bi bi-linkedin"></i></a>
                 </div>
               </div>
               <div class="member-info">
@@ -1081,10 +1081,10 @@
                 <img src="assets/img/team/fakhani.jpg" class="img-fluid" alt="apartman yönetimi aidat icra"
                   loading="lazy">
                 <div class="social">
-                  <a><i class="bi bi-twitter"></i></a>
-                  <a><i class="bi bi-facebook"></i></a>
-                  <a><i class="bi bi-instagram"></i></a>
-                  <a><i class="bi bi-linkedin"></i></a>
+                  <a href=""><i class="bi bi-twitter"></i></a>
+                  <a href=""><i class="bi bi-facebook"></i></a>
+                  <a href=""><i class="bi bi-instagram"></i></a>
+                  <a href=""><i class="bi bi-linkedin"></i></a>
                 </div>
               </div>
               <div class="member-info">
@@ -1099,10 +1099,10 @@
               <div class="member-img">
                 <img src="assets/img/team/3k.jpg" class="img-fluid" alt="bina yönetimi firması" loading="lazy">
                 <div class="social">
-                  <a><i class="bi bi-twitter"></i></a>
-                  <a><i class="bi bi-facebook"></i></a>
-                  <a><i class="bi bi-instagram"></i></a>
-                  <a><i class="bi bi-linkedin"></i></a>
+                  <a href=""><i class="bi bi-twitter"></i></a>
+                  <a href=""><i class="bi bi-facebook"></i></a>
+                  <a href=""><i class="bi bi-instagram"></i></a>
+                  <a href=""><i class="bi bi-linkedin"></i></a>
                 </div>
               </div>
               <div class="member-info">
@@ -1137,10 +1137,10 @@
                 <img src="assets/img/team/apsiyon-site.jpeg" class="img-fluid" alt="Apartman Yönetimi Dijital Asistanı"
                   loading="lazy">
                 <div class="social">
-                  <a><i class="bi bi-twitter"></i></a>
-                  <a><i class="bi bi-facebook"></i></a>
-                  <a><i class="bi bi-instagram"></i></a>
-                  <a><i class="bi bi-linkedin"></i></a>
+                  <a href=""><i class="bi bi-twitter"></i></a>
+                  <a href=""><i class="bi bi-facebook"></i></a>
+                  <a href=""><i class="bi bi-instagram"></i></a>
+                  <a href=""><i class="bi bi-linkedin"></i></a>
                 </div>
               </div>
               <div class="member-info">
@@ -1187,7 +1187,7 @@
         </div>
 
         <div>
-          <iframe style="border:0; width: 100%; height: 270px;  "
+          <iframe style="border:0; width: 100%; height: 270px;  " title="apartman yönetim şirketi"
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d12033.498871932918!2d28.98811250000001!3d41.0608011!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb4a63510b4eee873!2sParga%20Site%20ve%20Tesis%20Y%C3%B6netimi!5e0!3m2!1str!2str!4v1672243090483!5m2!1str!2str"
             width="600" height="450" allowfullscreen="true" loading="lazy" referrerpolicy="no-referrer-when-downgrade"
             name="google"></iframe>
