--- a/index.html
+++ b/index.html
@@ -1294,11 +1294,11 @@
           <div class="col-lg-2 col-md-6 footer-links">
             <h4>Hakkımızda</h4>
             <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Anasayfa</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#home">Anasayfa</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="#about">Biz kimiz?</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="#services">Hizmetlerimiz</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a>Kullanım şartları</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a>Gizlilik politikası</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Kullanım şartları</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Gizlilik politikası</a></li>
             </ul>
           </div>
 
