--- a/index.html
+++ b/index.html
@@ -72,14 +72,16 @@
 
 
     <div class="container d-flex align-items-center justify-content-between">
+      <h2 class="logo"><a href="#">PARGA YÖNETİM</a></h2>
       <h2 class="logo"><a href="tel:+905467620002">0546 762 00 02</a></h2>
+
 
 
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
       <nav id="navbar" class="navbar">
-        <div class="logo2"><img src="/pargalogo.png" height="" alt="apartman yönetim şirketi"></img></div>
+        <!-- <div class="logo2"><img src="/pargalogo.png" height="" alt="apartman yönetim şirketi"></img></div> -->
         <ul>
           <li><a class="nav-link scrollto active" href="#home">Anasayfa</a></li>
           <li><a class="nav-link scrollto" href="#about">Biz kimiz?</a></li>
@@ -1305,10 +1307,10 @@
           <div class="col-lg-3 col-md-6 footer-links">
             <h4>Sunduğumuz hizmetler</h4>
             <ul>
-              <li><i class="bx bx-chevron-right"></i> <a>Apartman ve Site Yönetimi</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a>Muhasebe</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a>Hukuk</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a>Temizlik</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Apartman ve Site Yönetimi</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Muhasebe</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Hukuk</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Temizlik</a></li>
               <!-- <li><i class="bx bx-chevron-right"></i> <a href="#">Graphic Design</a></li> -->
             </ul>
           </div>
