--- a/index.html
+++ b/index.html
@@ -1328,11 +1328,14 @@
     </div>
 
     <div class="container d-md-flex py-4">
-
+      <div class="logo"><img src="android-chrome-192x192.png"> </div>
       <div class="me-md-auto text-center text-md-start">
-        <div class="copyright">
+
+        <div class=" copyright">
           &copy; Copyright <strong><span>Parga Yönetim</span></strong>. All Rights Reserved.
         </div>
+
+
         <!-- <div class="credits"> -->
         <!-- All the links in the footer should remain intact. -->
         <!-- You can delete the links only if you purchased the pro version. -->
