--- a/index.html
+++ b/index.html
@@ -1114,7 +1114,7 @@
             </div>
           </div>
 
-          <!-- <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
+          <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
             <div class="member">
               <div class="member-img">
                 <img src="assets/img/team/KARADAĞ ELEKTRİK.png" class="img-fluid" alt="Apartman yönetimi firması"
@@ -1131,7 +1131,7 @@
                 <span>Elektrik ve Mühendislik</span>
               </div>
             </div>
-          </div> -->
+          </div>
 
           <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
             <div class="member">
