--- a/index.html
+++ b/index.html
@@ -673,13 +673,57 @@
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <img src="/apartman-yonetimi/referanslar/karadeniz (1).jpg" class="img-fluid" alt="eyüp apartman yönetimi"
+            <img src="/apartman-yonetimi/referanslar/karadeniz.jpg" class="img-fluid" alt="eyüp apartman yönetimi"
               loading="lazy">
             <div class="portfolio-info">
               <h4>Karadeniz Apartmanı - Eyüp</h4>
               <p></p>
-              <a href="/apartman-yonetimi/referanslar/karadeniz (1).jpg" data-gallery="portfolioGallery"
+              <a href="/apartman-yonetimi/referanslar/karadeniz.jpg" data-gallery="portfolioGallery"
                 class="portfolio-lightbox preview-link" title="Karadeniz Apartmanı"><i class="bx bx-plus"></i></a>
+              <a href="#" class="details-link" title="Detaylar"><i class="bx bx-link"></i></a>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+            <img src="/apartman-yonetimi/referanslar/YILDIZ KULE SİTESİ.jpg" class="img-fluid"
+              alt="bağcılar apartman yönetimi" loading="lazy">
+            <div class="portfolio-info">
+              <h4>Yıldız Kule Sitesi - Bağcılar</h4>
+              <p></p>
+              <a href="/apartman-yonetimi/referanslar/YILDIZ KULE SİTESİ.jpg" data-gallery="portfolioGallery"
+                class="portfolio-lightbox preview-link" title="YILDIZ KULE SİTESİ"><i class="bx bx-plus"></i></a>
+              <a href="#" class="details-link" title="Detaylar"><i class="bx bx-link"></i></a>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+            <img src="/apartman-yonetimi/referanslar/POYRAZ APARTMANI.jpg" class="img-fluid"
+              alt="esenyurt apartman yönetimi" loading="lazy">
+            <div class="portfolio-info">
+              <h4>Poyraz Apartmanı - Esenyurt</h4>
+              <p></p>
+              <a href="/apartman-yonetimi/referanslar/POYRAZ APARTMANI.jpg" data-gallery="portfolioGallery"
+                class="portfolio-lightbox preview-link" title="Poyraz Apartmanı"><i class="bx bx-plus"></i></a>
+              <a href="#" class="details-link" title="Detaylar"><i class="bx bx-link"></i></a>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+            <img src="/apartman-yonetimi/referanslar/CUMHURİYET APARTMANI.jpg" class="img-fluid"
+              alt="avcılar apartman yönetimi" loading="lazy">
+            <div class="portfolio-info">
+              <h4>Cumhuriyet Apartmanı - Avcılar</h4>
+              <p></p>
+              <a href="/apartman-yonetimi/referanslar/CUMHURİYET APARTMANI.jpg" data-gallery="portfolioGallery"
+                class="portfolio-lightbox preview-link" title="Cumhuriyet Apartmanı"><i class="bx bx-plus"></i></a>
+              <a href="#" class="details-link" title="Detaylar"><i class="bx bx-link"></i></a>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+            <img src="/apartman-yonetimi/referanslar/ÇAĞLAR APARTMANI.jpg" class="img-fluid"
+              alt="küçükçekmece apartman yönetimi" loading="lazy">
+            <div class="portfolio-info">
+              <h4>Çağlar Apartmanı - Küçükçekmece</h4>
+              <p></p>
+              <a href="/apartman-yonetimi/referanslar/ÇAĞLAR APARTMANI.jpg" data-gallery="portfolioGallery"
+                class="portfolio-lightbox preview-link" title="Çağlar Apartmanı"><i class="bx bx-plus"></i></a>
               <a href="#" class="details-link" title="Detaylar"><i class="bx bx-link"></i></a>
             </div>
           </div>
@@ -1038,6 +1082,24 @@
               <div class="member-info">
                 <h4>Sema H.</h4>
                 <span>Muhasebe</span>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
+            <div class="member">
+              <div class="member-img">
+                <img src="assets/img/team/team-2.jpg" class="img-fluid" alt="Sema H." loading="lazy">
+                <div class="social">
+                  <a href="#"><i class="bi bi-twitter"></i></a>
+                  <a href="#"><i class="bi bi-facebook"></i></a>
+                  <a href="#"><i class="bi bi-instagram"></i></a>
+                  <a href="#"><i class="bi bi-linkedin"></i></a>
+                </div>
+              </div>
+              <div class="member-info">
+                <h4>Zehra A.</h4>
+                <span>Müşteri Temsilcisi</span>
               </div>
             </div>
           </div>
