--- a/index.html
+++ b/index.html
@@ -1099,7 +1099,7 @@
               </div>
               <div class="member-info">
                 <h4>Zehra A.</h4>
-                <span>Müşteri Temsilcisi</span>
+                <span>Tahsilat</span>
               </div>
             </div>
           </div>
