--- a/index.html
+++ b/index.html
@@ -1138,7 +1138,30 @@
           <p>Sizlere en iyi hizmeti vermek için birlikte çalıştığımız ortaklarımız!</p>
         </div>
 
+
+
+
         <div class="row">
+
+          <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
+            <div class="member">
+              <div class="member-img">
+                <img src="assets/img/team/çelebi hukuk.png" class="img-fluid" alt="apartman yönetimi aidat icra"
+                  loading="lazy">
+                <div class="social">
+                  <a href="#"><i class="bi bi-twitter"></i></a>
+                  <a href="#"><i class="bi bi-facebook"></i></a>
+                  <a href="#"><i class="bi bi-instagram"></i></a>
+                  <a href="#"><i class="bi bi-linkedin"></i></a>
+                </div>
+              </div>
+              <div class="member-info">
+                <h4>Çelebi Hukuk Bürosu</h4>
+                <span>Hukuk Danışmanlığı ve İcra</span>
+              </div>
+            </div>
+          </div>
+
           <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
             <div class="member">
               <div class="member-img">
