--- a/index.html
+++ b/index.html
@@ -1035,7 +1035,8 @@
           <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
             <div class="member">
               <div class="member-img">
-                <img src="assets/img/team/team-3.jpg" class="img-fluid" alt="Furkan Denizman" loading="lazy">
+                <img src="assets/img/team/pargaaa_1709905076-trimmy-pargalogo (1).png" class="img-fluid"
+                  alt="Furkan Denizman" loading="lazy">
                 <div class="social">
                   <a href="#"><i class="bi bi-twitter"></i></a>
                   <a href="#"><i class="bi bi-facebook"></i></a>
@@ -1045,7 +1046,7 @@
               </div>
               <div class="member-info">
                 <h4>Furkan Denizman</h4>
-                <span>Kurucu</span>
+                <span>İdari İşler</span>
               </div>
             </div>
           </div>
@@ -1053,7 +1054,8 @@
           <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
             <div class="member">
               <div class="member-img">
-                <img src="assets/img/team/team-1.jpg" class="img-fluid" alt="İrfan Denizman" loading="lazy">
+                <img src="assets/img/team/pargaaa_1709905076-trimmy-pargalogo (1).png" class="img-fluid"
+                  alt="İrfan Denizman" loading="lazy">
                 <div class="social">
                   <a href="#"><i class="bi bi-twitter"></i></a>
                   <a href="#"><i class="bi bi-facebook"></i></a>
@@ -1071,7 +1073,8 @@
           <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
             <div class="member">
               <div class="member-img">
-                <img src="assets/img/team/team-2.jpg" class="img-fluid" alt="Sema H." loading="lazy">
+                <img src="assets/img/team/pargaaa_1709905076-trimmy-pargalogo (1).png" class="img-fluid" alt="Sema H."
+                  loading="lazy">
                 <div class="social">
                   <a href="#"><i class="bi bi-twitter"></i></a>
                   <a href="#"><i class="bi bi-facebook"></i></a>
@@ -1089,7 +1092,8 @@
           <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
             <div class="member">
               <div class="member-img">
-                <img src="assets/img/team/team-2.jpg" class="img-fluid" alt="Sema H." loading="lazy">
+                <img src="assets/img/team/pargaaa_1709905076-trimmy-pargalogo (1).png" class="img-fluid" alt="Sema H."
+                  loading="lazy">
                 <div class="social">
                   <a href="#"><i class="bi bi-twitter"></i></a>
                   <a href="#"><i class="bi bi-facebook"></i></a>
@@ -1146,7 +1150,7 @@
           <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
             <div class="member">
               <div class="member-img">
-                <img src="assets/img/team/çelebi hukuk.png" class="img-fluid" alt="apartman yönetimi aidat icra"
+                <img src="assets/img/team/çelebi hukukk.png" class="img-fluid" alt="apartman yönetimi aidat icra"
                   loading="lazy">
                 <div class="social">
                   <a href="#"><i class="bi bi-twitter"></i></a>
@@ -1165,7 +1169,7 @@
           <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
             <div class="member">
               <div class="member-img">
-                <img src="assets/img/team/fakhani.jpg" class="img-fluid" alt="apartman yönetimi aidat icra"
+                <img src="assets/img/team/fakhanik.jpg" class="img-fluid" alt="apartman yönetimi aidat icra"
                   loading="lazy">
                 <div class="social">
                   <a href="#"><i class="bi bi-twitter"></i></a>
@@ -1184,7 +1188,7 @@
           <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
             <div class="member">
               <div class="member-img">
-                <img src="assets/img/team/3k.jpg" class="img-fluid" alt="bina yönetimi firması" loading="lazy">
+                <img src="assets/img/team/3kk.jpg" class="img-fluid" alt="bina yönetimi firması" loading="lazy">
                 <div class="social">
                   <a href="#"><i class="bi bi-twitter"></i></a>
                   <a href="#"><i class="bi bi-facebook"></i></a>
@@ -1202,7 +1206,7 @@
           <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
             <div class="member">
               <div class="member-img">
-                <img src="assets/img/team/KARADAĞ ELEKTRİK.png" class="img-fluid" alt="Apartman yönetimi firması"
+                <img src="assets/img/team/KARADAĞ ELEKTRİKk.png" class="img-fluid" alt="Apartman yönetimi firması"
                   loading="lazy">
                 <div class="social">
                   <a href=""><i class="bi bi-twitter"></i></a>
@@ -1221,7 +1225,7 @@
           <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
             <div class="member">
               <div class="member-img">
-                <img src="assets/img/team/apsiyon-site.jpeg" class="img-fluid" alt="Apartman Yönetimi Dijital Asistanı"
+                <img src="assets/img/team/apsiyon-sitek.jpeg" class="img-fluid" alt="Apartman Yönetimi Dijital Asistanı"
                   loading="lazy">
                 <div class="social">
                   <a href="#"><i class="bi bi-twitter"></i></a>
