--- a/index.html
+++ b/index.html
@@ -1019,10 +1019,10 @@
               <div class="member-img">
                 <img src="assets/img/team/profile-pic.png" class="img-fluid" alt="Mert Denizman" loading="lazy">
                 <div class="social">
-                  <a href="#"><i class="bi bi-twitter"></i></a>
-                  <a href="#"><i class="bi bi-facebook"></i></a>
-                  <a href="#"><i class="bi bi-instagram"></i></a>
-                  <a href="#"><i class="bi bi-linkedin"></i></a>
+                  <a href="#team"><i class="bi bi-twitter"></i></a>
+                  <a href="#team"><i class="bi bi-facebook"></i></a>
+                  <a href="#team"><i class="bi bi-instagram"></i></a>
+                  <a href="#team"><i class="bi bi-linkedin"></i></a>
                 </div>
               </div>
               <div class="member-info">
@@ -1038,10 +1038,10 @@
                 <img src="assets/img/team/pargaaa_1709905076-trimmy-pargalogo (1).png" class="img-fluid"
                   alt="Furkan Denizman" loading="lazy">
                 <div class="social">
-                  <a href="#"><i class="bi bi-twitter"></i></a>
-                  <a href="#"><i class="bi bi-facebook"></i></a>
-                  <a href="#"><i class="bi bi-instagram"></i></a>
-                  <a href="#"><i class="bi bi-linkedin"></i></a>
+                  <a href="#team"><i class="bi bi-twitter"></i></a>
+                  <a href="#team"><i class="bi bi-facebook"></i></a>
+                  <a href="#team"><i class="bi bi-instagram"></i></a>
+                  <a href="#team"><i class="bi bi-linkedin"></i></a>
                 </div>
               </div>
               <div class="member-info">
@@ -1057,10 +1057,10 @@
                 <img src="assets/img/team/pargaaa_1709905076-trimmy-pargalogo (1).png" class="img-fluid"
                   alt="İrfan Denizman" loading="lazy">
                 <div class="social">
-                  <a href="#"><i class="bi bi-twitter"></i></a>
-                  <a href="#"><i class="bi bi-facebook"></i></a>
-                  <a href="#"><i class="bi bi-instagram"></i></a>
-                  <a href="#"><i class="bi bi-linkedin"></i></a>
+                  <a href="#team"><i class="bi bi-twitter"></i></a>
+                  <a href="#team"><i class="bi bi-facebook"></i></a>
+                  <a href="#team"><i class="bi bi-instagram"></i></a>
+                  <a href="#team"><i class="bi bi-linkedin"></i></a>
                 </div>
               </div>
               <div class="member-info">
@@ -1076,10 +1076,10 @@
                 <img src="assets/img/team/pargaaa_1709905076-trimmy-pargalogo (1).png" class="img-fluid" alt="Sema H."
                   loading="lazy">
                 <div class="social">
-                  <a href="#"><i class="bi bi-twitter"></i></a>
-                  <a href="#"><i class="bi bi-facebook"></i></a>
-                  <a href="#"><i class="bi bi-instagram"></i></a>
-                  <a href="#"><i class="bi bi-linkedin"></i></a>
+                  <a href="#team"><i class="bi bi-twitter"></i></a>
+                  <a href="#team"><i class="bi bi-facebook"></i></a>
+                  <a href="#team"><i class="bi bi-instagram"></i></a>
+                  <a href="#team"><i class="bi bi-linkedin"></i></a>
                 </div>
               </div>
               <div class="member-info">
@@ -1095,10 +1095,10 @@
                 <img src="assets/img/team/pargaaa_1709905076-trimmy-pargalogo (1).png" class="img-fluid" alt="Sema H."
                   loading="lazy">
                 <div class="social">
-                  <a href="#"><i class="bi bi-twitter"></i></a>
-                  <a href="#"><i class="bi bi-facebook"></i></a>
-                  <a href="#"><i class="bi bi-instagram"></i></a>
-                  <a href="#"><i class="bi bi-linkedin"></i></a>
+                  <a href="#team"><i class="bi bi-twitter"></i></a>
+                  <a href="#team"><i class="bi bi-facebook"></i></a>
+                  <a href="#team"><i class="bi bi-instagram"></i></a>
+                  <a href="#team"><i class="bi bi-linkedin"></i></a>
                 </div>
               </div>
               <div class="member-info">
@@ -1153,10 +1153,10 @@
                 <img src="assets/img/team/çelebi hukukk.png" class="img-fluid" alt="apartman yönetimi aidat icra"
                   loading="lazy">
                 <div class="social">
-                  <a href="#"><i class="bi bi-twitter"></i></a>
-                  <a href="#"><i class="bi bi-facebook"></i></a>
-                  <a href="#"><i class="bi bi-instagram"></i></a>
-                  <a href="#"><i class="bi bi-linkedin"></i></a>
+                  <a href="#team2"><i class="bi bi-twitter"></i></a>
+                  <a href="#team2"><i class="bi bi-facebook"></i></a>
+                  <a href="#team2"><i class="bi bi-instagram"></i></a>
+                  <a href="#team2"><i class="bi bi-linkedin"></i></a>
                 </div>
               </div>
               <div class="member-info">
@@ -1172,10 +1172,10 @@
                 <img src="assets/img/team/fakhanik.jpg" class="img-fluid" alt="apartman yönetimi aidat icra"
                   loading="lazy">
                 <div class="social">
-                  <a href="#"><i class="bi bi-twitter"></i></a>
-                  <a href="#"><i class="bi bi-facebook"></i></a>
-                  <a href="#"><i class="bi bi-instagram"></i></a>
-                  <a href="#"><i class="bi bi-linkedin"></i></a>
+                  <a href="#team2"><i class="bi bi-twitter"></i></a>
+                  <a href="#team2"><i class="bi bi-facebook"></i></a>
+                  <a href="#team2"><i class="bi bi-instagram"></i></a>
+                  <a href="#team2"><i class="bi bi-linkedin"></i></a>
                 </div>
               </div>
               <div class="member-info">
@@ -1190,10 +1190,10 @@
               <div class="member-img">
                 <img src="assets/img/team/3kk.jpg" class="img-fluid" alt="bina yönetimi firması" loading="lazy">
                 <div class="social">
-                  <a href="#"><i class="bi bi-twitter"></i></a>
-                  <a href="#"><i class="bi bi-facebook"></i></a>
-                  <a href="#"><i class="bi bi-instagram"></i></a>
-                  <a href="#"><i class="bi bi-linkedin"></i></a>
+                  <a href="#team2"><i class="bi bi-twitter"></i></a>
+                  <a href="#team2"><i class="bi bi-facebook"></i></a>
+                  <a href="#team2"><i class="bi bi-instagram"></i></a>
+                  <a href="#team2"><i class="bi bi-linkedin"></i></a>
                 </div>
               </div>
               <div class="member-info">
@@ -1209,10 +1209,10 @@
                 <img src="assets/img/team/KARADAĞ ELEKTRİKk.png" class="img-fluid" alt="Apartman yönetimi firması"
                   loading="lazy">
                 <div class="social">
-                  <a href=""><i class="bi bi-twitter"></i></a>
-                  <a href=""><i class="bi bi-facebook"></i></a>
-                  <a href=""><i class="bi bi-instagram"></i></a>
-                  <a href=""><i class="bi bi-linkedin"></i></a>
+                  <a href="#team2"><i class="bi bi-twitter"></i></a>
+                  <a href="#team2"><i class="bi bi-facebook"></i></a>
+                  <a href="#team2"><i class="bi bi-instagram"></i></a>
+                  <a href="#team2"><i class="bi bi-linkedin"></i></a>
                 </div>
               </div>
               <div class="member-info">
@@ -1228,10 +1228,10 @@
                 <img src="assets/img/team/apsiyon-sitek.jpeg" class="img-fluid" alt="Apartman Yönetimi Dijital Asistanı"
                   loading="lazy">
                 <div class="social">
-                  <a href="#"><i class="bi bi-twitter"></i></a>
-                  <a href="#"><i class="bi bi-facebook"></i></a>
-                  <a href="#"><i class="bi bi-instagram"></i></a>
-                  <a href="#"><i class="bi bi-linkedin"></i></a>
+                  <a href="#team2"><i class="bi bi-twitter"></i></a>
+                  <a href="#team2"><i class="bi bi-facebook"></i></a>
+                  <a href="#team2"><i class="bi bi-instagram"></i></a>
+                  <a href="#team2"><i class="bi bi-linkedin"></i></a>
                 </div>
               </div>
               <div class="member-info">
