--- a/index.html
+++ b/index.html
@@ -1045,8 +1045,27 @@
                 </div>
               </div>
               <div class="member-info">
-                <h4>Furkan Denizman</h4>
-                <span>İdari İşler</span>
+                <h4>Tayfun Kahraman</h4>
+                <span>Operasyon</span>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
+            <div class="member">
+              <div class="member-img">
+                <img src="assets/img/team/pargaaa_1709905076-trimmy-pargalogo (1).png" class="img-fluid"
+                  alt="Furkan Denizman" loading="lazy">
+                <div class="social">
+                  <a href="#team"><i class="bi bi-twitter"></i></a>
+                  <a href="#team"><i class="bi bi-facebook"></i></a>
+                  <a href="#team"><i class="bi bi-instagram"></i></a>
+                  <a href="#team"><i class="bi bi-linkedin"></i></a>
+                </div>
+              </div>
+              <div class="member-info">
+                <h4>Davut Tekdemir</h4>
+                <span>Operasyon</span>
               </div>
             </div>
           </div>
