--- a/index.html
+++ b/index.html
@@ -1191,6 +1191,24 @@
           <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
             <div class="member">
               <div class="member-img">
+                <img src="assets/img/team/adatek.jpg" class="img-fluid" alt="Apartman yönetimi firması" loading="lazy">
+                <div class="social">
+                  <a href="#team2"><i class="bi bi-twitter"></i></a>
+                  <a href="#team2"><i class="bi bi-facebook"></i></a>
+                  <a href="#team2"><i class="bi bi-instagram"></i></a>
+                  <a href="#team2"><i class="bi bi-linkedin"></i></a>
+                </div>
+              </div>
+              <div class="member-info">
+                <h4>Adatek Asansör</h4>
+                <span>Asansör Bakım ve Montajı</span>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
+            <div class="member">
+              <div class="member-img">
                 <img src="assets/img/team/KARADAĞ ELEKTRİKk.png" class="img-fluid" alt="Apartman yönetimi firması"
                   loading="lazy">
                 <div class="social">
